--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,29 +1,30 @@
 
 @keyframes typing {
-  from {
-    width: 0;
-    height: 0;
+  from { width: 0; 
+  max-width: 0;
   }
-
-  to {
-    width: 100%;
-    height: 100%;
-  }
+  to { width: 100%;
+  max-width: 100%; }
 }
 
 .typewriter {
-  overflow: hidden;
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em;
-  /* height: 300px; */
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
+  display: inline-block;
+  overflow: hidden; /* Ensures the text is not visible outside the containing element */
+  white-space: nowrap; 
+  letter-spacing: 0.1em; /* Add some space between characters */
+  animation: typing 3s steps(20, end) forwards;
 }
+.cursor {
+  display: inline-block;
+  width: 0.2em;
+  height: 12px;
+  background-color: orange;
+  animation: blink 1s infinite;
+  margin-left: 5px;
 
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: orange }
+}
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
 }
